# pooch-invenio

./: .gitignore  COPYING.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  re3data.yml
pooch_invenio/: __init__.py  instances.txt  repository.py
tests/: conftest.py
tests/data/: zenodo_record.py
tests/unit/: test_known_instances_repository.py  test_repository.py
