# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm >=7",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for pooch_invenio's version
[project]
name = "pooch_invenio"
description = "Add short description here"
readme = "README.md"
maintainers = [
    { name = "Dominic Kempf", email = "your@email.com" },
]
dynamic = ["version"]
requires-python = ">=3.9"
license = { text = "BSD-2" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "pooch-doi",
    "requests"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "requests-mock",
]
docs = [
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
]


# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "pooch_invenio",
]

# Configure setuptools_scm, which extracts the version number from
# the version control system. For more information see its documentation:
# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "pooch_invenio/_version.py"

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
